# workshop-materials

./: README.md  gobject-introspection-introduction.md
data_analysis_intro/: data_analysis_with_pycall.ipynb  data_analysis_with_ruby_data_tools.ipynb
data_analysis_with_ruby_data_tools/: data_analysis_with_ruby_data_tools.ipynb
gobject-introspection/: .gitignore  introduction.md
gobject-introspection/opencv-glib/: .gitignore  meson.build  opencv-glib-test.c  opencv-glib-test.lua  opencv-glib-test.py  opencv-glib-test.rb
gobject-introspection/opencv-glib/opencv-glib/: enums.c.template  enums.h.template  image-error.cpp  image-error.h  image.cpp  image.h  matrix.cpp  matrix.h  meson.build  opencv-glib.h
gobject-introspection/opencv-glib/test/: run-test.rb  run-test.sh  test-image.rb  test-matrix.rb
gobject-introspection/red-opencv/: red-opencv-test.rb  red-opencv.gemspec
gobject-introspection/red-opencv/dependency-check/: Rakefile
gobject-introspection/red-opencv/lib/: cv.rb
gobject-introspection/red-opencv/lib/cv/: version.rb
gobject-introspection/swig/: .gitignore  Makefile  Rakefile  extconf.rb  user.c  user.h  user.i  user.rb
inside_pycall/: inside_pycall.md
iruby_guides/: installation_guide.md  users_guide.md
iruby_guides/img/: install_python_win.pxm  install_ruby_win.pxm  install_ruby_win_finish.pxm  jupyter_new_notebook.pxm
iruby_installation_guide/: iruby_installation_guide.md
iruby_users_guide/: iruby_users_guide.md
rails_pycall_integration/: rails_pycall_integration.md
